# PDFOCR

./: .python-version  pyproject.toml
