[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "PDFOCR"
version = "0.0.1"
authors = [
  { name="Aprea Marco", email="marco.aprea@marconiverona.edu.it" }
]
description = ""
readme = "README.md"
requires-python = ">=3.10.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ApreaMarco/PDFOCR"
"Bug Tracker" = "https://github.com/ApreaMarco/PDFOCR/issues"
